# scribe

./: .gitignore  AGENTS.md  CMakeLists.txt  EDI_SUPPORT_PLAN.md  EVENTS.md  FAQ.md  LICENSE  README.md  caveats.md  demo.sh  events.md  model.md  theory.md
.github/workflows/: build.yml  linux-build.yml
demo/: stroke.journal  stroke_aggregates.ndjson  stroke_balance.json  stroke_notifications.ndjson  stroke_phi_aggregates.ndjson  stroke_phi_vault.sqlite  stroke_read_store.sqlite
demo/stroke.journal.d/20260601/: stroke-drop-coverage-834.journal
demo/stroke.journal.d/20260602/: stroke-drop-eligibility-270.journal
demo/stroke.journal.d/20260603/: stroke-drop-eligibility-271.journal
demo/stroke.journal.d/20260617/: stroke-drop-facility-837.journal  stroke-drop-professional-837.journal
demo/stroke.journal.d/20260701/: stroke-drop-rehab-837.journal
demo/stroke.journal.d/20260715/: stroke-drop-neurology-837.journal
demo/stroke.journal.d/20260720/: stroke-drop-facility-835.journal  stroke-drop-professional-835.journal
demo/stroke.journal.d/20260728/: stroke-drop-rehab-835.journal
demo/stroke.journal.d/20260805/: stroke-drop-neurology-835.journal
docs/: binary-snapshot-plan.md
scripts/: generate-throughput-x12.py  stroke-demo.sh  throughput-test.sh
src/: aggregate_stitcher.c  aggregate_stitcher.h  balance_projector.c  coverage_stitcher.h  event_writer.c  event_writer.h  journal.c  journal.h  journal_builder.c  journal_builder.h  json_scan.c  json_scan.h  json_write.c  json_write.h  main.c  phi_vault.c  phi_vault.h  projection.c  run_id.c  run_id.h  scribe_version.h.in  store.c  store.h  tokenise.h  tokenise_stub.c  x12_mapper_270_271.h  x12_mapper_834.c  x12_mapper_834.h  x12_mapper_835.c  x12_mapper_837.c  x12_mapper_837.h  x12_parser.c  x12_parser.h  x12_reader.c
src/db/: sqlite_util.c  sqlite_util.h
src/journal/: event_writer.c  event_writer.h  journal.c  journal.h  journal_builder.c  journal_builder.h
src/json/: json_read.c  json_read.h  json_write.c  json_write.h
src/phi/: phi_vault.c  phi_vault.h  tokenise.c  tokenise.h
src/projection/: balance_projector.c  balance_projector.h  projection.c  projection.h
src/read_store/: delta_exporter.c  delta_exporter.h  sqlite_store.c  store.h
src/stitch/claims/: aggregate_stitcher.c  aggregate_stitcher.h  private.h  snapshot.c
src/stitch/coverage/: coverage_stitcher.c  coverage_stitcher.h
src/util/: grow_vec.c  grow_vec.h  money.c  money.h  run_id.c  str_util.c  str_util.h  try.h
src/x12/: x12_parser.c  x12_parser.h  x12_reader.c  x12_reader.h
src/x12/mappers/: x12_mapper_270_271.c  x12_mapper_270_271.h  x12_mapper_834.c  x12_mapper_834.h  x12_mapper_835.c  x12_mapper_835.h  x12_mapper_837.c  x12_mapper_837.h  x12_mapper_phi.c  x12_mapper_phi.h  x12_mapper_registry.c  x12_mapper_registry.h
tests/: json_scan.c  test_837_mapper.c  test_core.c  test_parser.c  test_store.c  test_support.h  test_x12_parser.c
tests/fixtures/: sample_270.edi  sample_271.edi  sample_834.edi  sample_834_dependent.edi  sample_834_termination.edi  sample_835.edi  sample_835_multi_claim.edi  sample_837.edi  sample_837_billing_provider_switch.edi  sample_837_multi_claim.edi  sample_837_provider_roles.edi  sample_837_rendering_provider.edi  sample_837i_hi_components.edi  sample_837i_revenue_line.edi  x12_005010x222_example_01_synthetic.edi
tests/fixtures/stroke_encounter/: README.md  charge_transactions.ndjson  coverage_834.edi  eligibility_270.edi  eligibility_271.edi  expected_balance_projection.json  facility_835.edi  facility_837.edi  neurology_835.edi  neurology_837.edi  professional_835.edi  professional_837.edi  rehab_835.edi  rehab_837.edi
